more performance tweaks